salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/CCI_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>VIL-{000000000}</displayFormat>
        <label>Vlocity Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>