salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/DML_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>DML_Exceptions__c</fullName>
    <description>This field will capture dml exception.</description>
    <label>DML Exceptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>