salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/HTTP_Headers__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Headers__c</fullName>
    <description>Header information for the logs</description>
    <label>HTTP_Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>