salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Log Message is an Error Message</description>
    <label>IsError</label>
    <type>Checkbox</type>
</CustomField>