salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Message Correlation ID</description>
    <label>Message_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>