salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/ReferenceRecordID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceRecordID__c</fullName>
    <description>Saleforce Reference ID for looking up transaction logs</description>
    <label>ReferenceRecordID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>