salesforce_sfdx/main/default/objects/CCI_Integration_Log__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <description>System Integration With</description>
    <label>System_Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>